# glucose-photometry

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: core_analysis.md
scripts/: generate_core_visualizations.py
src/photometry/: __init__.py
src/photometry/analysis/: __init__.py  _numeric.py  _session.py  correlation.py  early_model.py  glucose.py  nulls.py
src/photometry/io/: __init__.py  bundles.py  excel.py
src/photometry/metrics/: __init__.py  onset.py  photometry.py
src/photometry/pipelines/: __init__.py  preprocess_bundle.py
src/photometry/plotting/: __init__.py  cohort.py  comparison.py  correlation.py  group_average.py  metrics.py  session.py  utils.py
src/photometry/preprocess/: __init__.py  cleaning.py  smoothing.py  time.py
src/photometry/signal/: __init__.py  fp_series.py
tests/: test_bundles.py  test_core_analysis.py  test_core_features.py  test_plotting_core.py
